Fix: Add gap in edit section

--- a/sass/components/_admin.scss
+++ b/sass/components/_admin.scss
@@ -71,6 +71,7 @@ header div h1 {
     background-color: rgba(109,183,243,255);
     display: flex;
     justify-content: flex-end;
+    gap: 0.5rem;
 }
 
 .tab-options div{
@@ -95,7 +96,6 @@ header div h1 {
 .tab-information div p {
     color: white;
     font-size: 1.1rem;
-    font-weight: 600;
 }
 
 .tab-information div .label {
@@ -185,6 +185,7 @@ header div h1 {
 form div {
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
 }
 
 form div label {
